WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307262
Unreviewed, fix ArithMod(Int52Use) constant folding
https://bugs.webkit.org/show_bug.cgi?id=307262
Summary
Unreviewed, fix ArithMod(Int52Use) constant folding
Yusuke Suzuki
Reported
2026-02-07 21:58:35 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-07 21:58:43 PST
<
rdar://problem/169900795
>
Yusuke Suzuki
Comment 2
2026-02-07 21:59:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58138
EWS
Comment 3
2026-02-07 22:03:58 PST
Committed
307027@main
(f96be6066671): <
https://commits.webkit.org/307027@main
> Reviewed commits have been landed. Closing PR #58138 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug