Unreviewed, fix ArithMod(Int52Use) constant folding https://bugs.webkit.org/show_bug.cgi?id=307262 rdar://169900795

* Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::handleConstantDivOp):

Canonical link: https://commits.webkit.org/307027@main