Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h
@@ -377,19 +377,39 @@ bool AbstractInterpreter<AbstractStateType>::handleConstantDivOp(Node* node)
                 return true;
             }
         } else if (left.isNumber() && right.isNumber()) {
-            if (isClobbering)
-                didFoldClobberWorld();
-
             if (isDivOperation) {
+                double doubleResult = left.asNumber() / right.asNumber();
+
+                if (isClobbering)
+                    didFoldClobberWorld();
                 if (op == ValueDiv)
-                    setConstant(node, jsNumber(left.asNumber() / right.asNumber()));
+                    setConstant(node, jsNumber(doubleResult));
                 else
-                    setConstant(node, jsDoubleNumber(left.asNumber() / right.asNumber()));
+                    setConstant(node, jsDoubleNumber(doubleResult));
             } else {
-                if (op == ValueMod)
-                    setConstant(node, jsNumber(fmod(left.asNumber(), right.asNumber())));
-                else
-                    setConstant(node, jsDoubleNumber(fmod(left.asNumber(), right.asNumber())));
+                double doubleResult = fmod(left.asNumber(), right.asNumber());
+
+                if (node->child1().useKind() == Int52RepUse) {
+                    if (node->hasArithMode()) {
+                        if (!shouldCheckOverflow(node->arithMode())) {
+                            if (std::isnan(doubleResult))
+                                doubleResult = 0;
+                        } else if (!shouldCheckNegativeZero(node->arithMode()))
+                            doubleResult += 0; // Sanitizes zero.
+                    }
+                    if (tryConvertToInt52(doubleResult) != JSValue::notInt52) {
+                        if (isClobbering)
+                            didFoldClobberWorld();
+                        setConstant(node, jsNumber(doubleResult));
+                    }
+                } else {
+                    if (isClobbering)
+                        didFoldClobberWorld();
+                    if (op == ValueMod)
+                        setConstant(node, jsNumber(doubleResult));
+                    else
+                        setConstant(node, jsDoubleNumber(doubleResult));
+                }
             }
 
             return true;
